
===============================================================================
Tag Creator: njn01
Tag Date:    29  September 2009
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20090929
Tag Testing: two-month C gx1v6 side-by-side comparison with ccsm4_0_beta23 tag
Tag Summary: Restore the "bounds" attribute to time coordinate 

M           18616   source/tavg.F90
===============================================================================
Tag Creator: njn01
Tag Date:    28  September 2009
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20090928
Tag Testing: see pop2 documentation page for testing lists. Will also be tested
             in ccsm4 pre-tag testing.
Tag Summary:

   This tag writes time-dependent time_bound information to tavg timeseries output files.

M           18520   source/io_netcdf.F90
M           18520   source/tavg.F90

===============================================================================
Tag Creator: njn01
Tag Date:    25  September 2009
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20090925
Tag Testing: see pop2 documentation page for testing lists. Will also be tested
             in ccsm4 pre-tag testing.
Tag Summary:

   This tag contains major changes to the tavg.F90 and supporting modules. The
   new code allows for the creation of tavg timeseries files "on-the-fly",
   and by default, the code is set up to create timeseries files of the daily
   tavg history fields.

   Further testing of this tag may result in changes/corrections. 

 
M           18462   source/io_types.F90
M           18462   source/io.F90
M           18462   source/io_netcdf.F90
M           18462   source/tavg.F90
M           18462   ChangeLog
M           18462   input_templates/pop2_in_build.csh
M           18462   input_templates/gx1v6_tavg_contents
M           18462   input_templates/gx3v5_tavg_contents
M           18462   input_templates/gx3v7_tavg_contents

===============================================================================
Tag Creator: njn01